syntax = "proto3";

package admin;

option go_package = "./pkg/pb";

service AdminService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePassworResponse) {}
}

// Login

message LoginRequest{
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse{
  int64 status = 1;
  string error = 2;
  string accesstoken =3;
}

// Forgot Password

message ChangePassworResponse{
  int64 status = 1;
  string error = 2;
}

// Change Password

message ChangePasswordRequest{
  int64  id = 1;
  string password = 2;
}


